<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_handler</name>
  <version>0.4.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ryo_michi@todo.todo">ryo_michi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>pybind11_vendor</build_depend>
  <build_depend>python3-dev</build_depend>

  <depend>rclcpp</depend>
  <depend>dynamixel_handler_msgs</depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
